# fixed_width_handler_cli

./: README.md  pyproject.toml  sample.fwf
src/: cli.py  core.py  fixed_width_file.py  fixed_width_file_handler.py  record_parser.py
